tests/out/error/other/empty_package.in.bt
import bait.tests.packages.empty
